--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,27 +2,23 @@ body{
  width: 100%;
  height: 100%;
   background-color: lightcyan
-  
-
 }
+
 div.a{
   line-height:200%;
   font-size : 24px;
   font-weight: bold;
 }
 
-* {box-sizing:border-box}
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+div.b{
+  list-style: height 100%;
+  font-size: 20px;
+
 }
 
-/* Hide the images by default */
-.mySlides {
-    display: none;
+h1{
+  text-shadow: 2px 2px;
 }
 
 
@@ -37,26 +33,64 @@ a:hover {
   color: black;
 }
 
-.previous {
-  background-color: #f1f1f1;
-  color: black;
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+
+
+
+/* Next & previous buttons */
+.prev {
+  cursor: pointer;
   position: fixed;
   top: 50%;
   left:0;
- 
+  color:black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
 }
 
 .next {
-  background-color: #4CAF50;
-  color: white;
-  position:fixed;
+  cursor: pointer;
+  position: fixed;
   top: 50%;
   right:0;
- 
+  color:black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
 }
 
-.round {
-  border-radius: 50%;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  background-color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: fixed;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
 
@@ -67,8 +101,8 @@ a:hover {
   padding: 8px 12px;
   position: absolute;
   right:0;
-  margin-right:10px;
-  bottom: 0px;
+  margin-right:-10px;
+  bottom: -20px;
 }
 
 /* The dots/bullets/indicators */
@@ -104,3 +138,23 @@ a:hover {
   from {opacity: .4} 
   to {opacity: 1}
 }
+
+
+/* .previous {
+  background-color: #f1f1f1;
+  color: black;
+  position: fixed;
+  top: 50%;
+  left:0;
+ 
+}
+
+.next {
+  background-color: #4CAF50;
+  color: white;
+  position:fixed;
+  top: 50%;
+  right:0;
+ 
+} */
+
