--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,21 +140,26 @@ a:hover {
 }
 
 
-/* .previous {
-  background-color: #f1f1f1;
-  color: black;
-  position: fixed;
-  top: 50%;
-  left:0;
- 
+/* D3JS stylesheet */
+
+.chart { 
+  background: #fff;
 }
 
-.next {
-  background-color: #4CAF50;
-  color: white;
-  position:fixed;
-  top: 50%;
-  right:0;
- 
-} */
+p {
+  font: 12px helvetica;
+}
 
+
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  stroke-width: 2px;
+  shape-rendering: crispEdges;
+}
+
+button {
+  position: absolute;
+  right: 50px;
+  top: 10px;
+}
