--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ body{
  width: 100%;
  height: 100%;
   background-color: lightcyan
+  
 }
 
 div.a{
@@ -115,6 +116,7 @@ a:hover {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  stroke: #000;
 }
 
 .active, .dot:hover {
@@ -139,27 +141,16 @@ a:hover {
   to {opacity: 1}
 }
 
-
-/* D3JS stylesheet */
-
-.chart { 
-  background: #fff;
-}
-
-p {
-  font: 12px helvetica;
-}
-
-
-.axis path, .axis line {
+.axis path,.axis line {
   fill: none;
   stroke: #000;
-  stroke-width: 2px;
   shape-rendering: crispEdges;
 }
 
-button {
+
+.tooltip {
   position: absolute;
-  right: 50px;
-  top: 10px;
+  width: 2000px;
+  height: 1000px;
+  pointer-events: none;
 }
