--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,7 +116,7 @@ a:hover {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  stroke: #000;
+  
 }
 
 .active, .dot:hover {
@@ -153,4 +153,9 @@ a:hover {
   width: 2000px;
   height: 1000px;
   pointer-events: none;
+}
+
+
+.dotted {
+  stroke: #000;
 }
