--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,6 +141,8 @@ a:hover {
   to {opacity: 1}
 }
 
+/* first chart  */
+
 .axis path,.axis line {
   fill: none;
   stroke: #000;
@@ -163,12 +165,6 @@ a:hover {
 
 
 /* second chart */
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
 
 .bar {
   fill: orange;
@@ -190,6 +186,7 @@ a:hover {
   color: #fff;
   border-radius: 2px;
 }
+
 
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
