adding meta-tag

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,7 +146,7 @@ a:hover {
 .axis path,.axis line {
   fill: none;
   stroke: #000;
-  shape-rendering: crispEdges;
+  shape-rendering: geometricPrecision;
 }
 
 
